# src/main/java/com/pragma/powerup/application/handler/ITraceabilityHandler.java
@@ -2,7 +2,10 @@ package com.pragma.powerup.application.handler;
 
 import com.pragma.powerup.application.dto.request.TraceabilityRequestDto;
 import com.pragma.powerup.application.dto.response.TraceabilityResponseDto;
+import java.util.List;
 
 public interface ITraceabilityHandler {
     TraceabilityResponseDto createTraceability(TraceabilityRequestDto request);
+
+    List<TraceabilityResponseDto> getOrderTraceability(Long orderId);
 }
