# src/main/java/com/pragma/powerup/domain/api/ITraceabilityServicePort.java
@@ -1,7 +1,10 @@
 package com.pragma.powerup.domain.api;
 
 import com.pragma.powerup.domain.model.Traceability;
+import java.util.List;
 
 public interface ITraceabilityServicePort {
     Traceability createTraceability(Traceability traceability);
+
+    List<Traceability> getOrderTraceability(Long orderId);
 }
